--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/is5558/colab_samples/blob/main/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "I4b_2KemgDWf"
       },
       "source": [
@@ -66,10 +56,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "uAiXj3DOfyZ-",
-        "outputId": "f216c00f-3317-4c59-b1e6-c43d02b02040",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f216c00f-3317-4c59-b1e6-c43d02b02040"
       },
       "outputs": [
         {
@@ -93,6 +83,61 @@
       },
       "source": [
         "Import dependencies"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sparknlp\n",
+        "from sparknlp.pretrained import PretrainedPipeline\n",
+        "\n",
+        "spark = sparknlp.start()\n",
+        "pipeline1 = PretrainedPipeline(\"check_spelling\", lang=\"en\")\n",
+        "pipeline2 = ContextSpellCheckerModel.pretrained('spellcheck_dl', lang=\"en\").setInputCols(\"token\").setOutputCol(\"corrected\")\n",
+        "\n",
+        "\n",
+        "text = \"Lets uss fixx the spellling mistakess in this sentense.\"\n",
+        "result1 = pipeline1.fullAnnotate(text)\n",
+        "# result2 = pipeline2.fullAnnotate(text)\n",
+        "for token in result1[0][\"checked\"]:\n",
+        "    print(f\"{token.result} ({token.begin}-{token.end})\")\n",
+        "# for token in result2[0][\"checked\"]:\n",
+        "#     print(f\"{token.result} ({token.begin}-{token.end})\")"
+      ],
+      "metadata": {
+        "id": "_DJnasw_YhUo",
+        "outputId": "f35d88a3-57ad-4081-c70d-98def926abf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning::Spark Session already created, some configs may not take.\n",
+            "check_spelling download started this may take some time.\n",
+            "Approx size to download 884.9 KB\n",
+            "[OK!]\n",
+            "spellcheck_dl download started this may take some time.\n",
+            "Approximate size to download 95.1 MB\n",
+            "[OK!]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'ContextSpellCheckerModel' object has no attribute 'fullAnnotate'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-23-197518208.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Lets uss fixx the spellling mistakess in this sentense.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mresult1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullAnnotate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mresult2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullAnnotate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtoken\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresult1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"checked\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{token.result} ({token.begin}-{token.end})\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'ContextSpellCheckerModel' object has no attribute 'fullAnnotate'"
+          ]
+        }
       ]
     },
     {
@@ -412,8 +457,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "interpreter": {
       "hash": "45150093197569bb3a58481dcd32cd1adb45462fa3448719e8ac38ada6166aca"
