--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -105,14 +105,13 @@
         "#     print(f\"{token.result} ({token.begin}-{token.end})\")"
       ],
       "metadata": {
-        "id": "_DJnasw_YhUo",
-        "outputId": "f35d88a3-57ad-4081-c70d-98def926abf8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 332
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_DJnasw_YhUo",
+        "outputId": "3315037f-aef0-441f-a56a-d4a9d2930529"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,18 +123,17 @@
             "[OK!]\n",
             "spellcheck_dl download started this may take some time.\n",
             "Approximate size to download 95.1 MB\n",
-            "[OK!]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'ContextSpellCheckerModel' object has no attribute 'fullAnnotate'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-23-197518208.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Lets uss fixx the spellling mistakess in this sentense.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mresult1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullAnnotate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mresult2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullAnnotate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtoken\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresult1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"checked\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{token.result} ({token.begin}-{token.end})\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'ContextSpellCheckerModel' object has no attribute 'fullAnnotate'"
+            "[OK!]\n",
+            "Lets (0-3)\n",
+            "uss (5-7)\n",
+            "fix (9-12)\n",
+            "the (14-16)\n",
+            "spelling (18-26)\n",
+            "mistake (28-36)\n",
+            "in (38-39)\n",
+            "this (41-44)\n",
+            "sent (46-53)\n",
+            ". (54-54)\n"
           ]
         }
       ]
