--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "uAiXj3DOfyZ-",
         "colab": {
@@ -100,9 +100,7 @@
         "result1 = pipeline1.fullAnnotate(text)\n",
         "# result2 = pipeline2.fullAnnotate(text)\n",
         "for token in result1[0][\"checked\"]:\n",
-        "    print(f\"{token.result} ({token.begin}-{token.end})\")\n",
-        "# for token in result2[0][\"checked\"]:\n",
-        "#     print(f\"{token.result} ({token.begin}-{token.end})\")"
+        "    print(f\"{token.result} ({token.begin}-{token.end})\")\n"
       ],
       "metadata": {
         "colab": {
@@ -111,7 +109,7 @@
         "id": "_DJnasw_YhUo",
         "outputId": "3315037f-aef0-441f-a56a-d4a9d2930529"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "g9hfxX3df3n3"
       },
@@ -176,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "763GC_wVNN6F",
         "colab": {
@@ -216,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -278,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "c7yPd884i_XQ"
       },
@@ -308,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "RLbrPvC3jOSw"
       },
@@ -329,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "YulVrYgAj2ex"
       },
@@ -372,7 +370,7 @@
         "id": "uekWfx_tFL3x",
         "outputId": "61989fd6-c7eb-4b9e-d7b5-1d8cb963fe29"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
