--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -63,20 +63,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "uAiXj3DOfyZ-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f216c00f-3317-4c59-b1e6-c43d02b02040"
+        "outputId": "5a45c087-bfb3-47a7-d867-f9356e349632"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m276.5/718.8 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.8/718.8 kB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.4/718.8 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.8 kB\u001b[0m \u001b[31m11.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.8/718.8 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "g9hfxX3df3n3"
       },
@@ -186,20 +186,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "763GC_wVNN6F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6577ff8-4367-4b7b-8744-115b794af31b"
+        "outputId": "874b5fbb-3233-4e6b-cb70-de61fa9327a0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Warning::Spark Session already created, some configs may not take.\n",
             "Spark NLP version 6.0.4\n",
             "Apache Spark version: 3.5.1\n",
             "Spark version: 3.5.1\n"
@@ -460,6 +459,75 @@
       "source": [
         "# this finished result does not need parsing and can directly be used an any other task.\n",
         "light_result['corrected']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sparknlp.pretrained import PretrainedPipeline\n",
+        "\n",
+        "pipeline = PretrainedPipeline('check_spelling', lang = 'en')"
+      ],
+      "metadata": {
+        "id": "q97bK21rlxvW",
+        "outputId": "5321d681-d604-4b03-b4ef-70ac1f736df7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "check_spelling download started this may take some time.\n",
+            "Approx size to download 884.9 KB\n",
+            "[OK!]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_corrected_text(annotations):\n",
+        "    corrected_tokens = [token.result for token in annotations['checked']]\n",
+        "    return \" \".join(corrected_tokens).replace(\" ,\", \",\").replace(\" .\", \".\")"
+      ],
+      "metadata": {
+        "id": "nkhCom3klkrB"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"\"\"Yesturday, I went to the libary to borow a book about anciant civilizations.\n",
+        "The wether was pleasent, so I decidid to walk insted of taking the buss. On the way,\n",
+        "I saw a restuarent that lookt intresting, and I plan to viset it soon.\"\"\"\n",
+        "\n",
+        "annotations = pipeline.fullAnnotate(text)[0]\n",
+        "corrected_text = get_corrected_text(annotations)\n",
+        "print(corrected_text)"
+      ],
+      "metadata": {
+        "id": "PgFQde1Nlkn6",
+        "outputId": "36ca54b5-c6cc-4e92-f9f2-ddf04125a079",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yesterday, I went to the library to borrow a book about ancient civilizations. The whether was pleasant, so I decided to walk instead of taking the bus. On the way, I saw a restuarent that looks interesting, and I plan to visit it soon.\n"
+          ]
+        }
       ]
     }
   ],
