--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -26,15 +26,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_HwrduqwTArI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "TnZG0I4ogNLI"
@@ -63,20 +54,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "uAiXj3DOfyZ-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a45c087-bfb3-47a7-d867-f9356e349632"
+        "outputId": "e9d3302e-1139-4060-e48f-fd86cd5e4767"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.4/718.8 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.8 kB\u001b[0m \u001b[31m11.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.8/718.8 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.5/718.8 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.8 kB\u001b[0m \u001b[31m12.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.8/718.8 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -87,437 +78,69 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DE2XyDI7NHtg"
-      },
-      "source": [
-        "Import dependencies"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "import sparknlp\n",
         "from sparknlp.pretrained import PretrainedPipeline\n",
         "\n",
-        "spark = sparknlp.start()\n",
-        "pipeline1 = PretrainedPipeline(\"check_spelling\", lang=\"en\")\n",
-        "pipeline2 = ContextSpellCheckerModel.pretrained('spellcheck_dl', lang=\"en\").setInputCols(\"token\").setOutputCol(\"corrected\")\n",
+        "def initialize_spark_nlp():\n",
+        "    try:\n",
+        "        spark = sparknlp.start()\n",
+        "        print(\"Spark NLP version:\", sparknlp.version())\n",
+        "        return spark\n",
+        "    except Exception as e:\n",
+        "        print(\"Error initializing Spark NLP session:\", str(e))\n",
+        "        raise\n",
         "\n",
+        "def load_pipeline(pipeline_name='check_spelling', lang='en'):\n",
         "\n",
-        "text = \"Lets uss fixx the spellling mistakess in this sentense.\"\n",
-        "result1 = pipeline1.fullAnnotate(text)\n",
-        "# result2 = pipeline2.fullAnnotate(text)\n",
-        "for token in result1[0][\"checked\"]:\n",
-        "    print(f\"{token.result} ({token.begin}-{token.end})\")\n",
+        "    try:\n",
+        "        return PretrainedPipeline(pipeline_name, lang=lang)\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error loading pipeline '{pipeline_name}':\", str(e))\n",
+        "        raise\n",
         "\n",
-        "# change made by Hari"
+        "def get_corrected_text(annotations):\n",
+        "    try:\n",
+        "        corrected_tokens = [token.result for token in annotations['checked']]\n",
+        "        return \" \".join(corrected_tokens).replace(\" ,\", \",\").replace(\" .\", \".\")\n",
+        "    except KeyError:\n",
+        "        print(\"Error: 'checked' key not found in annotations.\")\n",
+        "        return \"\"\n",
+        "\n",
+        "def main():\n",
+        "    text = (\n",
+        "        \"Yesturday, I went to the libary to borow a book about anciant civilizations. \"\n",
+        "        \"The wether was pleasent, so I decidid to walk insted of taking the buss. On the way, \"\n",
+        "        \"I saw a restuarent that lookt intresting, and I plan to viset it soon.\"\n",
+        "    )\n",
+        "\n",
+        "    try:\n",
+        "        # Initialize Spark NLP and load the pipeline\n",
+        "        spark = initialize_spark_nlp()\n",
+        "        pipeline = load_pipeline()\n",
+        "\n",
+        "        # Annotate text\n",
+        "        annotations = pipeline.fullAnnotate(text)[0]\n",
+        "\n",
+        "        # Get and print corrected text\n",
+        "        corrected_text = get_corrected_text(annotations)\n",
+        "        print(\"*\"*77)\n",
+        "        print(\"Original Text:\\n\", text)\n",
+        "        print(\"Corrected Text:\\n\", corrected_text)\n",
+        "        print(\"*\"*77)\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(\"An unexpected error occurred:\", str(e))\n",
+        "\n",
+        "main()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_DJnasw_YhUo",
-        "outputId": "3315037f-aef0-441f-a56a-d4a9d2930529"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning::Spark Session already created, some configs may not take.\n",
-            "check_spelling download started this may take some time.\n",
-            "Approx size to download 884.9 KB\n",
-            "[OK!]\n",
-            "spellcheck_dl download started this may take some time.\n",
-            "Approximate size to download 95.1 MB\n",
-            "[OK!]\n",
-            "Lets (0-3)\n",
-            "uss (5-7)\n",
-            "fix (9-12)\n",
-            "the (14-16)\n",
-            "spelling (18-26)\n",
-            "mistake (28-36)\n",
-            "in (38-39)\n",
-            "this (41-44)\n",
-            "sent (46-53)\n",
-            ". (54-54)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "g9hfxX3df3n3"
-      },
-      "outputs": [],
-      "source": [
-        "import json\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import pyspark\n",
-        "\n",
-        "import sparknlp\n",
-        "import pyspark.sql.functions as F\n",
-        "\n",
-        "from pyspark.ml import Pipeline\n",
-        "from pyspark.sql import SparkSession\n",
-        "from sparknlp.annotator import *\n",
-        "from sparknlp.base import *\n",
-        "from sparknlp.pretrained import PretrainedPipeline\n",
-        "from pyspark.sql.types import StringType, IntegerType\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report, accuracy_score"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T3Ur62RrgaxX"
-      },
-      "source": [
-        "Start Spark Session"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "763GC_wVNN6F",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "874b5fbb-3233-4e6b-cb70-de61fa9327a0"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Spark NLP version 6.0.4\n",
-            "Apache Spark version: 3.5.1\n",
-            "Spark version: 3.5.1\n"
-          ]
-        }
-      ],
-      "source": [
-        "spark = sparknlp.start()\n",
-        "\n",
-        "print(\"Spark NLP version\", sparknlp.version())\n",
-        "print(\"Apache Spark version:\", spark.version)\n",
-        "print(\"Spark version:\", pyspark.__version__)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AUP6-XeQgeQW"
-      },
-      "source": [
-        "## 2. Select the NER model and construct the pipeline"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "taOqLG1Ogc3D",
-        "outputId": "f67f272e-95c5-4efd-d20b-f017964bfc3f"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "spellcheck_dl download started this may take some time.\n",
-            "Approximate size to download 95.1 MB\n",
-            "[OK!]\n"
-          ]
-        }
-      ],
-      "source": [
-        "document_assembler = DocumentAssembler()\\\n",
-        "  .setInputCol(\"text\")\\\n",
-        "  .setOutputCol(\"document\")\n",
-        "\n",
-        "tokenizer = RecursiveTokenizer()\\\n",
-        "  .setInputCols([\"document\"])\\\n",
-        "  .setOutputCol(\"token\")\\\n",
-        "  .setPrefixes([\"\\\"\", \"(\", \"[\", \"\\n\"])\\\n",
-        "  .setSuffixes([\".\", \",\", \"?\", \")\",\"!\", \"‘s\"])\n",
-        "\n",
-        "spell_model = ContextSpellCheckerModel\\\n",
-        "    .pretrained('spellcheck_dl')\\\n",
-        "    .setInputCols(\"token\")\\\n",
-        "    .setOutputCol(\"corrected\")\n",
-        "\n",
-        "finisher = Finisher().setInputCols(\"corrected\")\n",
-        "\n",
-        "light_pipeline = Pipeline(stages = [document_assembler,\n",
-        "                                    tokenizer,\n",
-        "                                    spell_model,\n",
-        "                                    finisher])\n",
-        "## For comparison\n",
-        "full_pipeline = Pipeline(stages = [document_assembler,\n",
-        "                                   tokenizer,\n",
-        "                                   spell_model])\n",
-        "\n",
-        "empty_ds = spark.createDataFrame([[\"\"]]).toDF(\"text\")\n",
-        "pipeline_model = full_pipeline.fit(empty_ds)\n",
-        "l_pipeline_model = LightPipeline(light_pipeline.fit(empty_ds))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "C_DzGuMPibKr"
-      },
-      "source": [
-        "## 3. Create example inputs"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "c7yPd884i_XQ"
-      },
-      "outputs": [],
-      "source": [
-        "# Enter examples as strings in this array\n",
-        "input_list = [\"Plaese alliow me tao introdduce myhelf, I am a man of waelth und tiaste\"]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OvyOmrgHjO5J"
-      },
-      "source": [
-        "## 4. Use the pipeline to create outputs"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ICREynF-jzn8"
-      },
-      "source": [
-        "Full Pipeline"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "RLbrPvC3jOSw"
-      },
-      "outputs": [],
-      "source": [
-        "df = spark.createDataFrame(pd.DataFrame({\"text\": input_list}))\n",
-        "result = pipeline_model.transform(df)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mhlbvs1Dj1ck"
-      },
-      "source": [
-        "Light Pipeline"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "YulVrYgAj2ex"
-      },
-      "outputs": [],
-      "source": [
-        "# Light pipelines expect a single example.\n",
-        "light_result = l_pipeline_model.annotate(input_list[0])"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Uk72hQGqjX3f"
-      },
-      "source": [
-        "## 5. Visualize results"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J9JDK9_EjaF_"
-      },
-      "source": [
-        "Visualize comparison as dataframe"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result.select(F.explode(F.arrays_zip(result.token.result,\n",
-        "                                     result.corrected.result)).alias(\"cols\")) \\\n",
-        "      .select(F.expr(\"cols['0']\").alias(\"original\"),\n",
-        "              F.expr(\"cols['1']\").alias('corrected')).show(truncate=False)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uekWfx_tFL3x",
-        "outputId": "61989fd6-c7eb-4b9e-d7b5-1d8cb963fe29"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+----------+---------+\n",
-            "|original  |corrected|\n",
-            "+----------+---------+\n",
-            "|Plaese    |Please   |\n",
-            "|alliow    |allow    |\n",
-            "|me        |me       |\n",
-            "|tao       |to       |\n",
-            "|introdduce|introduce|\n",
-            "|myhelf    |myself   |\n",
-            "|,         |,        |\n",
-            "|I         |I        |\n",
-            "|am        |am       |\n",
-            "|a         |a        |\n",
-            "|man       |man      |\n",
-            "|of        |of       |\n",
-            "|waelth    |wealth   |\n",
-            "|und       |and      |\n",
-            "|tiaste    |taste    |\n",
-            "+----------+---------+\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5yItQfZmhcji"
-      },
-      "source": [
-        "Vizualise light pipeline and finished result"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9zHSiB0skP83",
-        "outputId": "4d5489df-b98e-43ed-ee8a-9cbd0ad1d4f1"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Please',\n",
-              " 'allow',\n",
-              " 'me',\n",
-              " 'to',\n",
-              " 'introduce',\n",
-              " 'myself',\n",
-              " ',',\n",
-              " 'I',\n",
-              " 'am',\n",
-              " 'a',\n",
-              " 'man',\n",
-              " 'of',\n",
-              " 'wealth',\n",
-              " 'and',\n",
-              " 'taste']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ],
-      "source": [
-        "# this finished result does not need parsing and can directly be used an any other task.\n",
-        "light_result['corrected']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sparknlp.pretrained import PretrainedPipeline\n",
-        "\n",
-        "pipeline = PretrainedPipeline('check_spelling', lang = 'en')"
-      ],
-      "metadata": {
-        "id": "q97bK21rlxvW",
-        "outputId": "5321d681-d604-4b03-b4ef-70ac1f736df7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "check_spelling download started this may take some time.\n",
-            "Approx size to download 884.9 KB\n",
-            "[OK!]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def get_corrected_text(annotations):\n",
-        "    corrected_tokens = [token.result for token in annotations['checked']]\n",
-        "    return \" \".join(corrected_tokens).replace(\" ,\", \",\").replace(\" .\", \".\")"
-      ],
-      "metadata": {
-        "id": "nkhCom3klkrB"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "text = \"\"\"Yesturday, I went to the libary to borow a book about anciant civilizations.\n",
-        "The wether was pleasent, so I decidid to walk insted of taking the buss. On the way,\n",
-        "I saw a restuarent that lookt intresting, and I plan to viset it soon.\"\"\"\n",
-        "\n",
-        "annotations = pipeline.fullAnnotate(text)[0]\n",
-        "corrected_text = get_corrected_text(annotations)\n",
-        "print(corrected_text)"
-      ],
-      "metadata": {
-        "id": "PgFQde1Nlkn6",
-        "outputId": "36ca54b5-c6cc-4e92-f9f2-ddf04125a079",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "05933539-c87c-4f6b-db55-55285b21a074"
       },
       "execution_count": 6,
       "outputs": [
@@ -525,7 +148,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Yesterday, I went to the library to borrow a book about ancient civilizations. The whether was pleasant, so I decided to walk instead of taking the bus. On the way, I saw a restuarent that looks interesting, and I plan to visit it soon.\n"
+            "Warning::Spark Session already created, some configs may not take.\n",
+            "Spark NLP version: 6.0.4\n",
+            "check_spelling download started this may take some time.\n",
+            "Approx size to download 884.9 KB\n",
+            "[OK!]\n",
+            "*****************************************************************************\n",
+            "Original Text:\n",
+            " Yesturday, I went to the libary to borow a book about anciant civilizations. The wether was pleasent, so I decidid to walk insted of taking the buss. On the way, I saw a restuarent that lookt intresting, and I plan to viset it soon.\n",
+            "Corrected Text:\n",
+            " Yesterday, I went to the library to borrow a book about ancient civilizations. The whether was pleasant, so I decided to walk instead of taking the bus. On the way, I saw a restuarent that looks interesting, and I plan to visit it soon.\n",
+            "*****************************************************************************\n"
           ]
         }
       ]
