--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -54,20 +54,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "uAiXj3DOfyZ-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9d3302e-1139-4060-e48f-fd86cd5e4767"
+        "outputId": "9c559351-59bb-4481-9bab-0fac02aba7f5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.5/718.8 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.8 kB\u001b[0m \u001b[31m12.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.8/718.8 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.9 kB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.9/718.9 kB\u001b[0m \u001b[31m18.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -159,6 +159,105 @@
             "Corrected Text:\n",
             " Yesterday, I went to the library to borrow a book about ancient civilizations. The whether was pleasant, so I decided to walk instead of taking the bus. On the way, I saw a restuarent that looks interesting, and I plan to visit it soon.\n",
             "*****************************************************************************\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! wget https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-5.1.3.jar -O spark-nlp-5.1.3.jar\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xPk_t4TfhCcs",
+        "outputId": "b5af3c17-bff8-4f60-b052-fdb263e0b74d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-07-10 13:26:35--  https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-5.1.3.jar\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.199.8, 54.231.160.248, 54.231.236.224, ...\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.199.8|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 708534094 (676M) [application/java-archive]\n",
+            "Saving to: ‘spark-nlp-5.1.3.jar’\n",
+            "\n",
+            "spark-nlp-5.1.3.jar 100%[===================>] 675.71M  54.6MB/s    in 13s     \n",
+            "\n",
+            "2025-07-10 13:26:48 (51.5 MB/s) - ‘spark-nlp-5.1.3.jar’ saved [708534094/708534094]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sparknlp\n",
+        "from pyspark.sql import SparkSession\n",
+        "from sparknlp.base import DocumentAssembler\n",
+        "from sparknlp.annotator import *\n",
+        "from pyspark.ml import Pipeline\n",
+        "\n",
+        "def initialize_spark_nlp():\n",
+        "    spark = SparkSession.builder \\\n",
+        "        .appName(\"check_spelling\") \\\n",
+        "        .config(\"spark.jars\", \"/content/spark-nlp-5.1.3.jar\") \\\n",
+        "        .getOrCreate()\n",
+        "    return spark\n",
+        "\n",
+        "def main():\n",
+        "    spark = initialize_spark_nlp()\n",
+        "    print(\"Spark NLP version:\", sparknlp.version())\n",
+        "    print(\"*\" * 77)\n",
+        "\n",
+        "    data = spark.createDataFrame([[\"Yesturday, I went to the libary and saw elefants.\"]]).toDF(\"text\")\n",
+        "\n",
+        "    document = DocumentAssembler().setInputCol(\"text\").setOutputCol(\"document\")\n",
+        "    tokenizer = Tokenizer().setInputCols([\"document\"]).setOutputCol(\"token\")\n",
+        "    spell = NorvigSweetingModel.pretrained() \\\n",
+        "        .setInputCols([\"token\"]) \\\n",
+        "        .setOutputCol(\"spell\")\n",
+        "\n",
+        "    pipeline = Pipeline(stages=[document, tokenizer, spell])\n",
+        "    model = pipeline.fit(data)\n",
+        "    result = model.transform(data)\n",
+        "\n",
+        "    result.select(\"spell.result\").show(truncate=False)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_5r5-n3LgywO",
+        "outputId": "6335dc50-2551-450d-c551-f1cee28a758a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Spark NLP version: 6.0.5\n",
+            "*****************************************************************************\n",
+            "spellcheck_norvig download started this may take some time.\n",
+            "Approximate size to download 4.2 MB\n",
+            "[OK!]\n",
+            "+----------------------------------------------------------------+\n",
+            "|result                                                          |\n",
+            "+----------------------------------------------------------------+\n",
+            "|[Yesterday, ,, I, went, to, the, library, and, saw, elefants, .]|\n",
+            "+----------------------------------------------------------------+\n",
+            "\n"
           ]
         }
       ]
